# docqflow

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FastAPI_Lab.py  LICENSE  README.md  app.py  classify.py  generate_permits.py  main.py  pyproject.toml  server.py
.github/workflows/: test.yml
data/gazetteer/: sf_parcels.csv
docs/: api.md  docker-registry.md  eval.md  llm-profiles.md  model-training.md  permit-generation.md
docs/presentation/: index.html
docs/setup/: gazetteer.md  gcp.md  supabase.md
docs/specs/: 2026-04-15-frontend-design.md
docs/superpowers/plans/: 2026-04-25-pr1-frontend-overhaul.md
docs/superpowers/specs/: 2026-04-25-frontend-overhaul-design.md
docs/vhs/: api-quickstart.tape  eval-harness.tape
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/scripts/: check-bundle-size.mjs
frontend/src/: App.tsx
frontend/src/context/: NotificationsContext.test.tsx  NotificationsContext.tsx  PreferencesContext.test.tsx  PreferencesContext.tsx  ThemeContext.tsx  UploadContext.tsx
frontend/src/hooks/: useHistory.test.tsx  useHistory.ts  usePlaceholderExtraction.test.tsx  usePlaceholderExtraction.ts  useReviewQueue.ts  useSubmissionsCount.ts  useUpload.test.tsx  useUpload.ts
frontend/src/lib/: api.ts  constants.ts  notifications.ts  pdfjsWorker.ts  permitData.ts  pipelineFields.test.ts  pipelineFields.ts  types.ts
frontend/src/pages/: About.test.tsx  About.tsx  Classify.tsx  Dashboard.test.tsx  Dashboard.tsx  History.tsx  Inbox.tsx  Landing.test.tsx  Landing.tsx  Login.test.tsx  Login.tsx  Notifications.tsx  Process.test.tsx  Process.tsx  Queue.test.tsx  Queue.tsx  Reports.test.tsx  Reports.tsx  Review.test.tsx  (+5 more)
scripts/: check_llm_profiles.py  check_mlflow.py  eval_pipeline.py  generate_permits.py
src/: classifier.py  server.py
src/api/: auth.py  completeness.py  completeness_test.py  config.py  database.py  documents.py  documents_pg.py  gcs_storage.py  migrations.py  models.py  pdf_fields.py  pdf_fields_test.py  pdf_storage.py  pipeline_runs.py  pipeline_runs_pg.py  postgres.py  routes.py  routes_pipeline.py
src/eval/: __init__.py  metrics.py  runner.py
src/pipeline/: __init__.py  extract.py  gazetteer.py  llm_profiles.py  orchestrator.py  reason.py  schemas.py  validate.py
supabase/: .gitignore  config.toml
supabase/migrations/: 20260502034553_init_documents_and_pipeline_runs.sql  20260502034554_enable_rls.sql  20260509071343_documents_user_sha_unique.sql
tests/: conftest.py  test_classifications.py  test_classifier_contract.py  test_config.py  test_database.py  test_documents.py  test_history_endpoint.py  test_migrations.py  test_pdf_storage.py  test_predict.py  test_predict_endpoint.py  test_stats_endpoint.py
tests/eval/: test_eval_pipeline.py
tests/fixtures/: gazetteer_sample.csv
tests/pipeline/: test_extract.py  test_gazetteer.py  test_llm_profiles.py  test_orchestrator.py  test_reason.py  test_routes_pipeline.py  test_schemas.py  test_validate.py
(+96 files in other folders)
