[project]
name = "docqflow"
version = "0.1.0"
description = "PDF document classifier using TF-IDF + Logistic Regression, served via FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.2",
    "joblib>=1.5.3",
    "mlflow>=3.10.1",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "requests>=2.33.0",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.42.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
notebook = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "ngrok>=1.4.0",
    "openai>=2.30.0",
    "pandas>=2.3.3",
    "pyngrok>=7.5.1",
    "setuptools>=82.0.1",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pre-commit>=4.2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.11.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by ruff-format)
]
